New recipe and some corrections
